--- a/index.html
+++ b/index.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kennedy Wisdom | Tech Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Kennedy Wisdom | My Tech Portfolio</title>
+        <meta name="description" content="Kennedy Wisdom - Kenyan Software Engineer building modern, responsive websites."/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
+        <link rel="stylesheet" href="style.css"/>
+        <link rel="icon" href="favicon.jpg" type="image/jpeg"/>
+
 </head>
 <body>
-  <header>
-    <h1>Kennedy Wisdom</h1>
-    <p>Software Engineer | Web Developer | Tech Enthusiast</p>
-  </header>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <p>Software Engineer | Web Developer | Tech Enthusiast</p>
+        <nav>
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#programming-languages">Programming Languages</a></li>
+                <li><a href="#interests">Interests</a></li>
+                <li><a href="#educational-background">Educational Background</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I'm Kennedy Wisdom, a passionate tech guru with 10+ years of experience in web development. I specialize in building responsive and scalable web applications using modern technologies. I enjoy solving problems, mentoring upcoming developers, and creating digital experiences that leave a mark.
-    </p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="project-card">
-        <h3>Portfolio Website</h3>
-        <p>A sleek personal portfolio built with HTML and CSS showcasing my skills and projects.</p>
-      </div>
-      <div class="project-card">
-        <h3>E-commerce Platform</h3>
-        <p>Designed a fully functional shopping site with responsive UI and secure checkout flow.</p>
-      </div>
-      <div class="project-card">
-        <h3>Blog System</h3>
-        <p>Created a content-driven blog platform with markdown support and user comments.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: kennedywisdom@example.com</p>
-    <p>LinkedIn: linkedin.com/in/kennedywisdom</p>
-    <p>GitHub: github.com/kennedywisdom</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Kennedy Wisdom. All rights reserved.</p>
-  </footer>
-</body>
+            </ul>
+        </nav>
+    </header>
+        <main>
+            <section id="about">
+                <h2>About Me</h2>
+                <p>Hi, I'm Kennedy Wisdom, a passionate software engineer from Kenya. I love building modern, responsive websites and applications that provide great user experiences.</p>
+            </section>
+            <section id="programming-languages">
+                <h2>Programming Languages</h2>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>Python</li>
+                    <li>Java</li>
+                    <li>C++</li>
+                </ul>
+            </section>
+            <section id="interests">
+                <h2>Interests</h2>
+                <p>I enjoy exploring new technologies, contributing to open-source projects, and learning about AI and machine learning.</p>
+            </section>
+            <section id="educational-background">
+                <h2>Educational Background</h2>
+                <p>I studied automotive Engineering but I'm enrolled at PLP studying Software Engineering and web development.</p>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <p>Check out some of my projects on <a href="https://github.com/wisken-dev" target="_blank">GitHub</a>.</p>
+            </section>
+            <section id="contact">
+                <h2>Contact</h2>
+                <p>You can reach me at <a href="mailto:wiskennedy7@gmail.com">wiskennedy7@gmail.com</a>.</p>
+                <p>Phone: <a href="tel:+254701276316">+254701276316</a></p>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; 2023 Kennedy Wisdom. All rights reserved.</p>
+            <p>Follow me on <a href="https://twitter.com/wisken_dev" target="_blank">Twitter</a>.</p>
+        </footer>
+    </body>
 </html>
